# accessibility-checker

./: .gitignore  LICENSE  README.md  Severity.py  a11y.json  login.py  main.py  pyproject.toml  report.html  requirements.txt  sitemap.py  violationsHandler.py
.github/workflows/: ci.yml
tests/: TEST_DOCUMENTATION.md  test_functional.py  test_integration.py  test_unit.py
