[project]
name = "accessibility-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "axe-core-python>=0.1.0",
    "playwright>=1.55.0",
    "python-stopwatch>=1.1.11",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "py-spy>=0.4.1",
]
